# QCodeEditor

./: .gitignore  CMakeLists.txt  README.md  TODO.md
examples/: CMakeLists.txt
examples/SimpleCodeEditor/: CMakeLists.txt  design.xml  main.cpp  resources.qrc  rules.xml
include/KGL/Design/: QCodeEditorDesign.hpp  QCodeEditorSheets.hpp
include/KGL/Widgets/: QCodeEditor.hpp  QCodeEditorTextFinder.hpp
include/QCodeEditor/: Config.hpp  QCodeEditor.hpp  QCodeEditorDesign.hpp  QCodeEditorHighlighter.hpp  QCodeEditorLineWidget.hpp  QCodeEditorPopup.hpp  QCodeEditorTextFinder.hpp  QSyntaxRule.hpp
resources/: editor.css  popup.css  resources.qrc
src/: CMakeLists.txt  QCodeEditor.cpp  QCodeEditorDesign.cpp  QCodeEditorHighlighter.cpp  QCodeEditorLineWidget.cpp  QCodeEditorPopup.cpp  QCodeEditorStyleSheets.cpp  QCodeEditorStyleSheets.hpp  QCodeEditorTextFinder.cpp  QSyntaxRule.cpp  XmlHelper.cpp  XmlHelper.hpp
src/Design/: QCodeEditorDesign.cpp  QCodeEditorSheets.cpp
src/Widgets/: QCodeEditor.cpp  QCodeEditorEvents.cpp  QCodeEditorSlots.cpp  QCodeEditorTextFinder.cpp
